--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.9",
-    "tailwindcss": "^3.2.7"
+    "tailwindcss": "^3.2.7",
+    "@headlessui/react": "^1.7.13"
   }
 }
